# ProiectLicenta

./: README.md
Dependencies/OpenCV_4.2.0_build/: setup_vars_opencv4.cmd
Documentation/: Demo_Aplicatie.avi  Documentation.docx  Doxyfile  Fisa lucrarii de licenta_Andrei Laurentiu-Adrian.doc  Prezentare.docx  Prezentare_Andrei Laurentiu-Adrian.pptx  ~$Prezentare_Andrei Laurentiu-Adrian.pptx
Documentation/Doxygen Generated Documentation/html/: _algorithms_8cpp.html  _algorithms_8cpp.js  _algorithms_8h.html  _algorithms_8h.js  _algorithms_8h_source.html  _denoising_algorithms_8h.html  _denoising_algorithms_8h.js  _denoising_algorithms_8h_source.html  _main_8cpp.html  _utils_8cpp.html  _utils_8h.html  _utils_8h.js  _utils_8h_source.html  annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_utils-members.html  class_utils.html  classes.html  dir_0f23e584132acd6f00c3fdfaa91ed33c.html  dir_0f23e584132acd6f00c3fdfaa91ed33c.js  dir_21bbd98758fd2b68d2a59fb3803faa13.html  dir_21bbd98758fd2b68d2a59fb3803faa13.js  dir_22c2fe1cae1f229f02ccea3bdd82a98a.html  dir_22c2fe1cae1f229f02ccea3bdd82a98a.js  dir_48742d4be12027bde6e5abb146bb4d22.html  dir_48742d4be12027bde6e5abb146bb4d22.js  dir_56f3da2a91fc6e621a1fa1db6b7ea3de.html  dir_56f3da2a91fc6e621a1fa1db6b7ea3de.js  dir_6a773501734614f7422109c030cd21bc.html  dir_6a773501734614f7422109c030cd21bc.js  dir_8326c680ae16c5b9a3bf61d83f3cc95f.html  dir_8326c680ae16c5b9a3bf61d83f3cc95f.js  dir_8533f2a4dc8df58cf6954ca53bbe1946.html  dir_8533f2a4dc8df58cf6954ca53bbe1946.js  dir_885cc87fac2d91e269af0a5a959fa5f6.html  dir_885cc87fac2d91e269af0a5a959fa5f6.js  dir_a21d89fbd3428975588bb0e6489e7346.html  dir_a21d89fbd3428975588bb0e6489e7346.js  (+40 more)
Documentation/Doxygen Generated Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_d.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js
Documentation/Doxygen Generated Documentation/latex/: _algorithms_8cpp.tex  _algorithms_8h.tex  _algorithms_8h_source.tex  _denoising_algorithms_8h.tex  _denoising_algorithms_8h_source.tex  _main_8cpp.tex  _utils_8cpp.tex  _utils_8h.tex  _utils_8h_source.tex  annotated.tex  class_main_window.tex  class_utils.tex  dir_0f23e584132acd6f00c3fdfaa91ed33c.tex  dir_21bbd98758fd2b68d2a59fb3803faa13.tex  dir_22c2fe1cae1f229f02ccea3bdd82a98a.tex  dir_48742d4be12027bde6e5abb146bb4d22.tex  dir_56f3da2a91fc6e621a1fa1db6b7ea3de.tex  dir_6a773501734614f7422109c030cd21bc.tex  dir_8326c680ae16c5b9a3bf61d83f3cc95f.tex  dir_8533f2a4dc8df58cf6954ca53bbe1946.tex  dir_885cc87fac2d91e269af0a5a959fa5f6.tex  dir_a21d89fbd3428975588bb0e6489e7346.tex  dir_a7a0eac06cc90dd4d8f43dc8183564f8.tex  dir_b2c831d6564a6b826c63daf4bd9eb6f0.tex  dir_c6d98ba3c29a60f26ca215f5f99b41c6.tex  dir_cf80fb52cdb6aa3ad94a4abb412df86e.tex  dir_e2f294b7849b16d85be17a76964391cc.tex  dir_e634f1c2b736b9fb46b900732df1022c.tex  dir_f2290c7017e1049333cdb612defbbf34.tex  dir_fba447a8c12503d3631abef905b8b354.tex  dir_fc0183d6341231b9959bc7f5e844b739.tex  dir_ffd1f789ec7bd0a45fc6ad92579c5070.tex  files.tex  hierarchy.tex  refman.tex  view_8cpp.tex  view_8h.tex  view_8h_source.tex
Documentation/Imagini documentatie/: creier.jfif
Project/: CMakeLists.txt
Project/Algorithms/: CMakeLists.txt
Project/Algorithms/include/: Algorithms.h  CMakeLists.txt  DenoisingAlgorithms.h
Project/Algorithms/src/: Algorithms.cpp  CMakeLists.txt
Project/BrainTumorSegmentation/: CMakeLists.txt
Project/BrainTumorSegmentation/include/: CMakeLists.txt  Utils.cpp  Utils.h  view.h
Project/BrainTumorSegmentation/src/: CMakeLists.txt  Main.cpp  brainTumor.ui  view.cpp
Project/DenoisingTest/: CMakeLists.txt
Project/DenoisingTest/include/: CMakeLists.txt  DenoisingAlgorithms.h  Utils.h
Project/DenoisingTest/src/: CMakeLists.txt  Main.cpp  Utils.cpp
Results/Denoising Algorithms/: mse_results.xlsx  new_noise_results_1000.xlsx  noise_results.xlsx  self_algorithms_noise_results.xlsx  self_algorithms_time_results.xlsx  time_results.xlsx  time_results_1000.xlsx
